# apartment-hunter

./: .gitignore  README.md  TODO.md  consumer_filter.py  data_model.py  docker-compose.yml  main.py  notifier.py  pyproject.toml  scraper_producer.py  test_scrape.py
